<resources>
    <string name="app_name">To Do List:</string>
    <string name="addNew">Add New</string>
    <string name="reminders">Reminders:</string>
    <string name="doneWithToDo">Done With To Do</string>
    <string-array name="toDo">
        <item>to do one</item>
        <item>to do two</item>
    </string-array>
    <string-array name="reminders">
        <item>reminder one</item>
        <item>reminder two</item>
    </string-array>
    <string name="pick_time">Pick Time:</string>
    <string name="pick_date">Pick Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="enter_todo_label">Enter ToDo Label</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="done">DONE</string>
</resources>