<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dfreeman.todolist.AddNewActivity">

    <EditText
        android:id="@+id/enter_name"
        android:inputType="textPersonName"
        android:text="@string/enter_todo_label"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/start_date"
        android:textSize="25sp"
        android:id="@+id/start_date"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/enter_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_below="@+id/start_date"
        android:id="@+id/pick_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time"
        android:onClick="showTimePickerDialog" />

    <Button
        android:id="@+id/pick_date"
        android:layout_below="@+id/pick_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog" />

    <TextView
        android:text="@string/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pick_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:textSize="25sp"
        android:id="@+id/end_date" />

    <Button
        android:layout_below="@+id/end_date"
        android:id="@+id/pick_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time"
        android:onClick="showTimePickerDialog" />

    <Button
        android:id="@+id/pick_end_date"
        android:layout_below="@+id/pick_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog" />

    <CheckBox
        android:text="@string/add_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pick_end_date"
        android:layout_alignRight="@+id/pick_end_date"
        android:layout_alignEnd="@+id/pick_end_date"
        android:layout_marginTop="13dp"
        android:id="@+id/reminderOption"
        android:onClick="showBoth" />

</RelativeLayout>
